samples/_failures_safe/1761656264_1a8b8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13c13899.c: In function ‘main’:
./samples/SAFE/__tmp_13c13899.c:144:5: error: expected declaration or statement at end of input
  144 |     if (compressed_size == 0) {
      |     ^~
./samples/SAFE/__tmp_13c13899.c:144:5: error: expected declaration or statement at end of input
